fixed margins of about me card so that it's aligned. Fixed active states of each page's navbar.

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
     .profile {
         height: 100%;
         width: 75%;
-        margin: 10% 20% 20% 20%;
+        margin: 10% auto 20% auto;
         background-color: #f2f2f2;
         border-radius: 5%;
     }
